don't display standard article text if limited

--- a/app/views/articles/templates/_standard.html.haml
+++ b/app/views/articles/templates/_standard.html.haml
@@ -21,4 +21,5 @@
       = image_tag article.featured_artwork.image.large.url
       %figcaption= article.featured_artwork.caption
 
-  = raw render_content(article.content)
+  - if !@limited
+    = raw render_content(article.content)
