unify hr style for articles

--- a/app/assets/stylesheets/components/_article.sass
+++ b/app/assets/stylesheets/components/_article.sass
@@ -57,6 +57,14 @@
     width: 100%
     height: auto
 
+  hr
+    max-width: 8rem
+    border-style: solid
+    border-color: var(--black)
+    border-width: 0.5px 0
+    margin: 0 auto
+    padding: 0
+
   .section-separator
     text-align: center
     color: var(--blue)
