--- a/app/views/articles/templates/_stack.html.haml
+++ b/app/views/articles/templates/_stack.html.haml
@@ -6,15 +6,11 @@
           #{ link_to @article.issue.issue_date.strftime('%-d %B %Y'), @article.issue } &mdash;
           #{ link_to display_category(@article.category), category_path(@article.category) }
 
-    .wrapper.-small{role: 'layout'}
-      .block.-mb2
-        %h1.h.-h1.-serif= raw article.title
-      .block.-mb2
-        .p.-t3.-centered
-          - if article.authors.any?
-            by #{ raw article.authors.map { |author| link_to(author.full_name, author) }.to_sentence }
+    .wrapper.-medium{role: 'layout'}
+      %h1.inline.h.-h1.-serif= raw article.title
 
-      %hr.-separator
+      - if article.authors.any?
+        .inline-block.p.-t3 &nbsp;by #{ raw article.authors.map { |author| link_to(author.full_name, author) }.to_sentence }
 
   .wrapper.-small{role: 'layout'}
     = render partial: 'articles/meta', locals: {article: article}
