--- a/app/views/articles/_index.html.haml
+++ b/app/views/articles/_index.html.haml
@@ -1,8 +1,9 @@
-- articles.in_groups_of(4, false).each do |group|
-  .row
-    - group.each do |article|
-      .col-xs-12.col-lg-3.flex
-        = render partial: 'articles/excerpts/result', locals: { article: article }
-        %hr.-stroke
+- cache ['index', articles] do
+  - articles.in_groups_of(4, false).each do |group|
+    .row
+      - group.each do |article|
+        .col-xs-12.col-lg-3.flex
+          = render partial: 'articles/excerpts/result', locals: { article: article }
+          %hr.-stroke
 
 = render partial: 'layouts/pagination', locals: {page: page, collection: articles, query_params: query_params}
