big space around hr in article

--- a/app/assets/stylesheets/components/_article.sass
+++ b/app/assets/stylesheets/components/_article.sass
@@ -56,7 +56,7 @@
     border-style: solid
     border-color: var(--black)
     border-width: 0.5px 0
-    margin: 0 auto
+    margin: 8rem auto !important
     padding: 0
 
   .section-separator
