--- a/app/assets/stylesheets/components/_article.sass
+++ b/app/assets/stylesheets/components/_article.sass
@@ -10,6 +10,14 @@
   @media screen and (min-width: $large)
   @media screen and (min-width: $max)
 
+  figure.artwork
+    width: 100%
+    max-width: 120rem
+    margin: 0 auto
+
+    &.-portrait
+      max-width: 68rem
+
   // handle block-level spacing here
   section.content
     max-width: 68rem
