make contained wrapper a bit more ... contained

--- a/app/assets/stylesheets/layouts/_wrapper.sass
+++ b/app/assets/stylesheets/layouts/_wrapper.sass
@@ -31,8 +31,8 @@
       margin-left: auto
       margin-right: auto
 
-  @media screen and (min-width: $contained)
+  @media screen and (min-width: $max)
     &.-contained
-      max-width: var(--contained)
+      max-width: var(--max)
       margin-left: auto
       margin-right: auto
