--- a/app/assets/stylesheets/shared/_basics.sass
+++ b/app/assets/stylesheets/shared/_basics.sass
@@ -6,6 +6,7 @@ html
   @media screen and (min-width: $large)
     font-size: 10px
   @media screen and (min-width: $max)
+    font-size: 11px
 
 body
   border-top: 0.75rem solid var(--black)
