styles for article images

--- a/app/assets/stylesheets/components/_article.sass
+++ b/app/assets/stylesheets/components/_article.sass
@@ -39,6 +39,14 @@
         margin-top: 1rem
         padding-top: 0
 
+  a, a:link, a:visited
+    display: inline
+    font-weight: 800
+    border-bottom: 1px solid var(--black)
+    &:hover
+      color: var(--blue)
+      border-bottom-color: var(--blue)
+
   h3, h4
     font-family: $sans
     font-size: 27px
