--- a/app/views/admin/articles/show.html.haml
+++ b/app/views/admin/articles/show.html.haml
@@ -18,7 +18,7 @@
     - if @article.featured_artwork.present?
       %figure.artwork.-featured
         = image_tag @article.featured_artwork.image.large.url
-        %figcaption= @article.featured_artwork.caption
+      %p= @article.featured_artwork.caption
 
     = raw render_content(@article.content)
 
