change analytics snippet

--- a/app/views/layouts/error.html.haml
+++ b/app/views/layouts/error.html.haml
@@ -18,4 +18,4 @@
     .centered{role: 'layout'}
       .content= yield
 
-    = render partial: 'layouts/analytics'
+    = render partial: 'layouts/snippets/analytics'
