--- a/app/views/articles/excerpts/_tiny.html.haml
+++ b/app/views/articles/excerpts/_tiny.html.haml
@@ -1,15 +1,14 @@
 - cache [article, 'tiny'] do
-  .block.-pb4.-my2
-    = link_to article.path, class: 'excerpt' do
-      .block.-mb1
-        %figure.artwork.-landscape
-          .overlay.block.-b.-bg-default
-            .p.-t5.c.-w4= display_category(article.category)
+  = link_to article.path, class: ['block', '-my2', '-pb2', 'excerpt'] do
+    .block.-mb1
+      %figure.artwork.-landscape
+        .overlay.block.-b.-bg-default
+          .p.-t5.c.-w4= display_category(article.category)
 
-          - if article.featured_artwork.image.present?
-            = image_tag article.featured_artwork.image.large.url
+        - if article.featured_artwork.image.present?
+          = image_tag article.featured_artwork.image.large.url
 
-      .p.-t4.-centered
-        %h3.headline.inline.c.-w4.-serif= article.title
-        - if article.authors.any?
-          .inline-block.c.-w4 by #{ article.authors.map(&:full_name).to_sentence }
+    .p.-t4.-centered
+      %h3.headline.inline.c.-w4.-serif= article.title
+      - if article.authors.any?
+        .inline-block.c.-w4 by #{ article.authors.map(&:full_name).to_sentence }
