squash and add some public election stuff

--- a/app/assets/stylesheets/admin.sass
+++ b/app/assets/stylesheets/admin.sass
@@ -13,6 +13,7 @@ body
 
 .button, a.button, a.button:link, a.button:visited, input.button
   font-family: $sans
+  font-size: var(--t5)
   -webkit-appearance: none
   background: var(--default)
   color: var(--black)
