--- a/app/views/admin/election_candidates/show.html.haml
+++ b/app/views/admin/election_candidates/show.html.haml
@@ -5,9 +5,8 @@
       = link_to @election_survey.title, [:admin, @election_survey]
       = link_to @election_candidate.full_name, [:admin, @election_survey, @election_candidate]
 
-    %nav
-      = link_to "Edit", [:edit, :admin, @election_survey, @election_candidate], class: 'button'
-
+    %nav &nbsp;
+    
 .block.-pb1.-my2.-bb
   %h3 Responses
   
