--- a/app/views/projects/election_candidates/show.html.haml
+++ b/app/views/projects/election_candidates/show.html.haml
@@ -1,9 +1,12 @@
-%h1= @candidate.full_name
-%h2 #{ @candidate.area_name }, #{ @candidate.party_name }
+.wrapper{role: 'layout'}
+  .row
+    .col-xs-12.col-md-6
+      %h1= @candidate.full_name
+      %h2 #{ @candidate.area_name }, #{ @candidate.party_name }
 
-- @questions.each do |question|
-  %p
-    %strong= question.body
-  %p
-    :markdown
-      #{ question.election_survey_responses.find_by(election_candidate: @candidate).body }
+    .col-xs-12.col-md-6
+      %article.p.-sf.-t3
+        - @questions.each do |question|
+          %h3= question.body
+          :markdown
+            #{ question.election_survey_responses.find_by(election_candidate: @candidate).body }
