--- a/app/views/admin/election_surveys/show.html.haml
+++ b/app/views/admin/election_surveys/show.html.haml
@@ -20,18 +20,21 @@
     %h3 Questions
   %table.admin-table
     %tbody
-      - @election_survey_questions.each do |election_survey_question|
+      - @election_survey.question_objects.each do |question|
         %tr
-          %td= link_to [election_survey_question.position, truncate(election_survey_question.body, length: 64)].join('. '), [:admin, @election_survey, election_survey_question]
-          %td{width: '150'}= pluralize election_survey_question.election_survey_responses.count, 'response'
+          %td #{ question.position }. #{ question.body }
+          %td{width: '150px'}
+            #{ pluralize @election_survey.responses_for_question(question).count, 'response' }
 
 .block.-b.-p1.-my2
   .block.-pb1.-mb2.-bb
     %h3 Candidates
   %table.admin-table
     %tbody
-      - @election_candidates.each do |election_candidate|
+      - @election_survey.candidate_objects.each do |candidate|
         %tr
-          %td= link_to election_candidate.full_name, [:admin, @election_survey, election_candidate]
-          %td{width: '150'}= election_candidate.party_name
-          %td{width: '150'}= election_candidate.area_name
+          %td #{ candidate.name }
+          %td #{ candidate.area }
+          %td #{ candidate.party }
+          %td{width: '150px'}
+            #{ pluralize @election_survey.responses_for_candidate(candidate).count, 'response' }
