--- a/app/assets/stylesheets/shared/_text.sass
+++ b/app/assets/stylesheets/shared/_text.sass
@@ -60,6 +60,10 @@
   font-style: normal
 
 .p
+  &.-mono
+    font-family: $mono
+    font-weight: 400
+    font-style: normal
   // font size
   &.-t1
     font-size: var(--t1)
