--- a/app/views/projects/election_surveys/question.html.haml
+++ b/app/views/projects/election_surveys/question.html.haml
@@ -1,14 +1,14 @@
 %h1= @question.body
 
-%ul
+%ul.responses-list
   - @responses.each do |response|
     - candidate = @survey.find_candidate(response.candidate)
     - party = @survey.find_party(candidate.party)
 
     %li
-      %h3
-        #{ link_to candidate.name, candidate_projects_election_survey_path(id: @survey.slug, candidate_id: candidate.slug) },
-        #{ link_to party.name, party_projects_election_survey_path(id: @survey.slug, party_id: party.slug) }
-      
+      = link_to candidate_projects_election_survey_path(id: @survey.slug, candidate_id: candidate.slug), class: 'block -m1 -mb2' do
+        .artwork.-square= image_tag "candidates/#{ candidate.slug }.jpg"
+        .block.-mt1= candidate.name
+
       :markdown
         #{ response.body }
