--- a/app/views/layouts/elections.html.haml
+++ b/app/views/layouts/elections.html.haml
@@ -39,7 +39,7 @@
       = yield
 
     .wrapper.-container{role: 'layout'}
-      .block.-bt.-py4.-my4
+      .block.-py4.-my4
         .wrapper.-small{role: 'layout'}
           .p.-centered.-t4.-sf.-mono
             :markdown
