--- a/app/views/projects/election_surveys/show.html.haml
+++ b/app/views/projects/election_surveys/show.html.haml
@@ -8,6 +8,11 @@
               %h1.h.-h1.-left
                 :markdown
                   What do the candidates for city council have to say about the issues that matter to you?
+                
+              .block.-mt2
+                .p.-t3
+                  :markdown
+                    We asked our readers what they want candidates in the upcoming elections to discuss as they compete for votes, and then posed those questions to the candidates for the 2019 local elections. These are their responses.
 
 .block.-py4
   .wrapper.-container{role: 'layout'}
@@ -27,6 +32,5 @@
           .block.-bg-faint.-p2
             .p.-t4.-sf
               :markdown
-                **We asked our readers** what they want candidates in the upcoming elections to discuss as they compete for votes, and then posed those questions to the candidates for the 2019 local elections. These are their responses.
 
                 You can read more about this project and how we're covering the <a href="https://www.dublininquirer.com/2019/02/27/what-issues-do-you-want-local-elections-candidates-to-talk-about" data-turbolinks="false">2019 local election</a>.
