--- a/app/views/projects/election_surveys/show.html.haml
+++ b/app/views/projects/election_surveys/show.html.haml
@@ -34,3 +34,5 @@
               :markdown
 
                 You can read more about this project and how we're covering the <a href="https://www.dublininquirer.com/2019/02/27/what-issues-do-you-want-local-elections-candidates-to-talk-about" data-turbolinks="false">2019 local election</a>.
+
+= render partial: 'projects/election_surveys/footer'
