--- a/app/assets/stylesheets/elections.sass
+++ b/app/assets/stylesheets/elections.sass
@@ -87,10 +87,44 @@ body
     flex: 1
 
 .area-switcher
-  border: 1px solid var(--default)
-  padding: 1rem
-  select
+  label
     display: none
+  select
+    display: block
+    font-size: var(--t4)
+    font-family: $sans
+    font-weight: 400
+    color: var(--default)
+    line-height: 1.4
+    padding: .5em 1.5em .5em .75em
+    width: 100%
+    max-width: 100%
+    box-sizing: border-box
+    margin: 0
+    border: 1px solid var(--default)
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.0)
+    border-radius: 0
+    -moz-appearance: none
+    -webkit-appearance: none
+    appearance: none
+    background-color: var(--blue)
+    background-position: right 1rem center
+    background-image: url(asset-path('elections/switch.svg'))
+    background-size: 2.5rem auto
+    background-repeat: no-repeat
+    &::-ms-expand
+      display: none
+    &:hover
+      border-color: var(--white)
+      color: var(--white)
+      cursor: pointer
+    &:focus
+      border-color: var(--white)
+      box-shadow: 0 0 0 0 rgba(59, 153, 252, 0)
+      color: var(--white)
+      outline: none
+    option
+      font-weight: normal
 
 .question-anchor
   width: 100%
@@ -99,15 +133,16 @@ body
   display: block
 
 .question
+  position: relative
+  padding-bottom: 8rem
   .header
     position: relative
     position: sticky
     position: -webkit-sticky
     top: 0
     z-index: 9999
-    background-color: var(--default)
+    background-color: var(--faint)
     padding: 2rem
-    border-bottom: 1px solid var(--black)
 
     .next, .back
       position: absolute
@@ -159,3 +194,12 @@ body
         width: 100%
         height: 100%
         object-fit: cover
+
+.block.-bg-blue
+  a, a:link, a:visited
+    color: var(--default)
+  
+  .p.-sf
+    a, a:link, a:visited
+      color: var(--default)
+      border-color: var(--default)
