--- a/app/views/projects/election_surveys/area.html.haml
+++ b/app/views/projects/election_surveys/area.html.haml
@@ -2,27 +2,31 @@
   .row
     .col-xs-12.col-md-9
       %h1.h.-h2 #{ @area.name }
+      %p #{ pluralize @candidates.count, 'candidate' } competing for #{ pluralize @area.seats, 'seat' }
     .col-xs-12.col-md-3
       .area-switcher
-        %label Change electoral area
-        %select
+        %label switch electoral area
+        %select{'data-behaviour': 'switchView', 'data-path': area_projects_election_survey_path(id: @survey.slug, area_id: '')}
+          %option Switch electoral area
+          <option disabled>──────────</option>
           - @areas.each do |area|
             %option{value: area.slug}= area.name
 
-.block.-bg-faint
+.block.-bg-faint.-pt4
   - @questions.each do |question|
     %a.question-anchor{id: "question-#{ question.position }"} &nbsp;
-    .question.block.-bb{style: 'position: relative'}
+    .question.block
       .header
         - if question.position > 1
           %a.back{href: "#question-#{ question.position - 1 }", 'data-behaviour': 'scroll'} Back
 
         .wrapper.-small{role: 'layout'}
           .h.-h3.-centered
-            .c.-w8
-              #{ question.position }.
-              %br
-              = question.body
+            %a{href: "#question-#{ question.position }", 'data-behaviour': 'scroll'}
+              .c.-w8
+                #{ question.position }.
+                %br
+                = question.body
 
         - if question.position < 10
           %a.next{href: "#question-#{ question.position + 1 }", 'data-behaviour': 'scroll'} Next
