--- a/app/assets/stylesheets/elections.sass
+++ b/app/assets/stylesheets/elections.sass
@@ -87,6 +87,12 @@ body
     flex: 1
 
 .area-switcher
+  margin-top: 2rem
+  flex: 1
+  display: flex
+  flex-direction: column
+  justify-content: flex-end
+  align-items: stretch
   label
     display: none
   select
@@ -135,6 +141,13 @@ body
 .question
   position: relative
   padding-bottom: 8rem
+
+  &.-brief
+    padding-bottom: 0
+    .header
+      .next, .back
+        display: none
+
   .header
     position: relative
     position: sticky
